// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TyresComponent should create psv view only with populated data 1`] = `
<vtm-tyres
  activeRecord={[Function Object]}
>
  <table
    class="govuk-table table-details"
  >
    <thead
      class="govuk-table__head"
    >
      
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Speed restriction
        </th>
        <td
          class="govuk-table__cell"
          id="test-speedRestriction"
        >
           - 
        </td>
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          scope="col"
        />
        <td
          class="govuk-table__header govuk-!-font-weight-bold"
          scope="col"
        >
          Tyre code
        </td>
        <td
          class="govuk-table__header govuk-!-font-weight-bold"
          scope="col"
        >
          Tyre size
        </td>
        <td
          class="govuk-table__header govuk-!-font-weight-bold"
          scope="col"
        >
          Ply rating
        </td>
        
        <td
          class="govuk-table__header govuk-!-font-weight-bold"
          scope="col"
        >
           Speed category symbol 
        </td>
        <td
          class="govuk-table__header govuk-!-font-weight-bold"
          scope="col"
        >
          Fitment code
        </td>
        <td
          class="govuk-table__header govuk-!-font-weight-bold"
          scope="col"
        >
          Load index
        </td>
      </tr>
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
           Axle 1 
        </th>
        <td
          class="govuk-table__cell"
          id="test-tyreCode-1"
        >
           - 
        </td>
        <td
          class="govuk-table__cell"
          id="test-tyreSize-1"
        >
           16 
        </td>
        <td
          class="govuk-table__cell"
          id="test-plyRating-1"
        >
           12S 
        </td>
        
        <td
          class="govuk-table__cell"
          id="test-speedCategorySymbol-1"
        >
           - 
        </td>
        <td
          class="govuk-table__cell"
          id="test-fitmentCode-1"
        >
           12313 
        </td>
        <td
          class="govuk-table__cell"
          id="test-dataTrAxles-1"
        >
           1234 
        </td>
      </tr>
    </tbody>
  </table>
</vtm-tyres>
`;

exports[`TyresComponent should create view only with populated data 1`] = `
<vtm-tyres
  activeRecord={[Function Object]}
>
  <table
    class="govuk-table table-details"
  >
    <thead
      class="govuk-table__head"
    >
      
      
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header"
          scope="col"
        />
        <td
          class="govuk-table__header govuk-!-font-weight-bold"
          scope="col"
        >
          Tyre code
        </td>
        <td
          class="govuk-table__header govuk-!-font-weight-bold"
          scope="col"
        >
          Tyre size
        </td>
        <td
          class="govuk-table__header govuk-!-font-weight-bold"
          scope="col"
        >
          Ply rating
        </td>
        
        <td
          class="govuk-table__header govuk-!-font-weight-bold"
          scope="col"
        >
          Fitment code
        </td>
        <td
          class="govuk-table__header govuk-!-font-weight-bold"
          scope="col"
        >
          Load index
        </td>
      </tr>
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
           Axle 1 
        </th>
        <td
          class="govuk-table__cell"
          id="test-tyreCode-1"
        >
           - 
        </td>
        <td
          class="govuk-table__cell"
          id="test-tyreSize-1"
        >
           16 
        </td>
        <td
          class="govuk-table__cell"
          id="test-plyRating-1"
        >
           12S 
        </td>
        
        <td
          class="govuk-table__cell"
          id="test-fitmentCode-1"
        >
           12313 
        </td>
        <td
          class="govuk-table__cell"
          id="test-dataTrAxles-1"
        >
           1234 
        </td>
      </tr>
    </tbody>
  </table>
</vtm-tyres>
`;

exports[`TyresComponent should render the editable component if editState is true 1`] = `
<vtm-tyres
  activeRecord={[Function Object]}
  editState={[Function Boolean]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        <vtm-tyres-edit
          ng-reflect-tech-record="[object Object]"
        >
          <div>
            active record is: {
    "tyreUseCode": "4",
    "axles": [
      {
        "parkingBrakeMrk": true,
        "axleNumber": 1,
        "brakes": {
          "brakeActuator": 123,
          "leverLength": 123,
          "springBrakeParking": true
        },
        "tyres": {
          "tyreSize": "16",
          "plyRating": "12S",
          "fitmentCode": "12313",
          "dataTrAxles": 1234
        },
        "weights": {
          "gbWeight": 100,
          "kerbWeight": 150,
          "designWeight": 250,
          "eecWeight": 150
        }
      }
    ]
  }
          </div>
        </vtm-tyres-edit>
      </dt>
    </div>
  </dl>
</vtm-tyres>
`;
